syntax = "proto2";

import "proto/Exchange.proto";
option java_package = "proto";
option java_outer_classname = "GameStateExchangeProto";
message GameStateExchange {
	extend Exchange {
		optional GameStateExchange game_update = 5;
	}
	enum StateExchangeType {
		NEW_OBJECT = 1;
		OBJECT_UPDATE = 2;
		STALE_OBJECT = 3;
		OBJECT_HISTORY = 4;
	}

	required StateExchangeType purpose = 1;
	oneof content {
		ObjectCreatedNotice new_object = 2;
		GroupObjectUpdate updated_object_group = 3;
		ObjectRemovedNotice stale_object = 4;
		ObjectHistory object_history = 5;
	}
	message ObjectCreatedNotice {
		enum GameObjectType{
			GAME_OBJECT=1;
			GAME_OBJECT_CHILD=2;
		}
		optional string schema = 1;
		optional int32 object_id = 2;
		optional GameObjectType type = 3;
	}

	message ObjectHistory {
		repeated ObjectCreatedNotice objects = 1;
	}

	message GroupObjectUpdate {
		repeated ObjectUpdate objects = 2;
		message ObjectUpdate {
			optional int32 object_id = 3;
			optional double pos_x = 1;
			optional double pos_y = 2;
		}

	}

	message ObjectRemovedNotice {
		optional int32 object_id = 1;
	}

}